Issue #19932: Fix typo in import.h, missing whitespaces in function prototypes.